--- a/public/index.html
+++ b/public/index.html
@@ -19,17 +19,17 @@
           Here's a list of games
         </p>
         <ul>
-          <li><a href="celeste.html">Celeste</a></li>
-          <li><a href="dusk.html">Dusk Child</a></li>
-          <li><a href="lair.html">The Lair</a></li>
-          <li><a href="shooter.html">Pat Shooter</a></li>
-          <li><a href="mistigri.html">Mistigri</a></li>
-          <li><a href="pool.html">Combo Pool</a></li>
-          <li><a href="tower.html">Tower of Archeos</a></li>
-          <li><a href="hug.html">Hug Arena</a></li>
-          <li><a href="racer.html">Pico Racer</a></li>
-          <li><a href="tempest.html">Tempest</a></li>
-           <li><a href="/crossyroad/index.html">Crossy Road</li>
+          <li><a href="public/celeste.html">Celeste</a></li>
+          <li><a href="public/dusk.html">Dusk Child</a></li>
+          <li><a href="public/lair.html">The Lair</a></li>
+          <li><a href="public/shooter.html">Pat Shooter</a></li>
+          <li><a href="public/mistigri.html">Mistigri</a></li>
+          <li><a href="public/pool.html">Combo Pool</a></li>
+          <li><a href="public/tower.html">Tower of Archeos</a></li>
+          <li><a href="public/hug.html">Hug Arena</a></li>
+          <li><a href="public/racer.html">Pico Racer</a></li>
+          <li><a href="public/tempest.html">Tempest</a></li>
+           <li><a href="public/crossyroad/index.html">Crossy Road</li>
         </ul>
         <p>
           Contribute with more games, report issues, or discuss on <a href="https://github.com/jajoosam/ofline">Github</a>.<br>These games are hosted on <a href="https://glitch.com/~ofline">glitch</a>, and were created on <a href="https://www.lexaloffle.com/pico-8.php">pico-8</a>.
