--- a/public/index.html
+++ b/public/index.html
@@ -29,7 +29,7 @@
           <li><a href="public/hug.html">Hug Arena</a></li>
           <li><a href="public/racer.html">Pico Racer</a></li>
           <li><a href="public/tempest.html">Tempest</a></li>
-           <li><a href="public/crossyroad/index.html">Crossy Road</li>
+           <li><a href="/crossyroad/index.html">Crossy Road</li>
         </ul>
         <p>
           Contribute with more games, report issues, or discuss on <a href="https://github.com/jajoosam/ofline">Github</a>.<br>These games are hosted on <a href="https://glitch.com/~ofline">glitch</a>, and were created on <a href="https://www.lexaloffle.com/pico-8.php">pico-8</a>.
